js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-async-arrow-function-return-await-import-source-assignment-expr-not-optional.js
DONOTEVALUATE
(
)
;
(
async
(
)
=
>
await
import
.
source
(
)
)
